[coverage:run]
branch = True
parallel = True

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
omit =
    *__init__*
    lta/lta_cmd.py
    lta/transfer/*
ignore_errors = True

[coverage:html]
directory = htmlcov

[flake8]
ignore=E501

[mypy]
show_error_codes = True
warn_unused_ignores = True

[options.extras_require]
dev =
  flake8
  mypy
  pytest
  pytest-asyncio
  pytest-cov
  pytest-mock
  requests
  types-requests

[semantic_release]
version_variable = lta/__init__.py:__version__
upload_to_pypi = False
patch_without_tag = True
commit_parser = semantic_release.history.tag_parser
minor_tag = [minor]
fix_tag = [fix]

[wipac:cicd_setup_builder]
# pypi_name = long-term-archive
python_min = 3.8
author = WIPAC Developers
author_email = developers@icecube.wisc.edu
keywords_spaced = archive data i3 metadata PFDST PFRaw warehouse
# package_dirs = lta
