[coverage:run]
branch = True
parallel = True

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
omit =
    *__init__*
    lta/lta_cmd.py
    lta/transfer/*
ignore_errors = True

[coverage:html]
directory = htmlcov

[flake8]
ignore=E501

[mypy]
show_error_codes = True
warn_unused_ignores = True

[options]
install_requires =
    binpacking
    colorama
    hurry.filesize
    motor
    prometheus-client
    protobuf
    pyjwt[crypto]
    pymongo
    tornado
    wipac-dev-tools
    wipac-rest-tools
    wipac-telemetry

[options.extras_require]
dev =
  flake8
  mypy
  pycycle
  pytest
  pytest-asyncio
  pytest-cov
  pytest-mock
  requests
  types-requests

[semantic_release]
version_variable = lta/__init__.py:__version__
upload_to_pypi = False
patch_without_tag = True
commit_parser = semantic_release.history.tag_parser
minor_tag = [minor]
fix_tag = [fix]

[wipac:cicd_setup_builder]
python_min = 3.8
